--- a/RISC_V_Assembly_Prediction_Model.ipynb
+++ b/RISC_V_Assembly_Prediction_Model.ipynb
@@ -934,7 +934,7 @@
     "# version = \"C\"  # or \"B\", or \"C\" — set manually per run\n",
     "\n",
     "# Load previous results if the file exists\n",
-    "results_file = \"training_results.json\"\n",
+    "results_file = \"training_results.json.json\"\n",
     "if os.path.exists(results_file):\n",
     "    with open(results_file, \"r\") as f:\n",
     "        all_results = json.load(f)\n",
@@ -976,7 +976,7 @@
     "import json\n",
     "\n",
     "# Load results from the JSON file\n",
-    "with open(\"training_results.json\", \"r\") as f:\n",
+    "with open(\"training_results.json.json\", \"r\") as f:\n",
     "    all_results = json.load(f)\n",
     "\n",
     "# Extract perplexity values\n",
